MediaRecorder causes Network process crashed in about 10 minutes https://bugs.webkit.org/show_bug.cgi?id=239635 <rdar://92146629>

Reviewed by Geoffrey Garen.

Migrate BlobData storage from ThreadSafeDataBuffer to DataSegment.
DataSegment allows to either use memory or file-based memory.

Add an option in BlobRegistryImpl to use file-based memory.
This is enabled when calling setFileDirectory.
Otherwise, we stick to regular memory.

We call setFileDirectory for blob registries owned by NetworkSessions.

We introduce routines in FileSystem to allow creating file mapped data.
We use it in BlobRegistryImpl by creating the file at the right side, map it, delete the file.
Then we write the data and drop the read protection.
This allows to have clean memory while keeping this apporach viable for ephemeral sessions.

To do file-based memory, we first store data as regular memory, then hop to a background queue to write data in a file.
We then map this file in a DataSegment.
We can then delete this file and replace the stored data as regular memory by the file-based data segment.
We do this since adding a blob to the registry is currently a synchronous operation.

Covered by existing tests.

* Source/WTF/wtf/FileSystem.cpp:
(WTF::FileSystemImpl::createMappedFileData):
(WTF::FileSystemImpl::finalizeMappedFileData):
(WTF::FileSystemImpl::mapToFile):
* Source/WTF/wtf/FileSystem.h:
* Source/WebCore/platform/network/BlobRegistryImpl.cpp:
(WebCore::storeInMappedFileData):
(WebCore::BlobRegistryImpl::createDataSegment):
* Source/WebCore/platform/network/BlobData.cpp:
* Source/WebCore/platform/network/BlobData.h:
* Source/WebCore/platform/network/BlobRegistryImpl.cpp:
* Source/WebCore/platform/network/BlobRegistryImpl.h:
* Source/WebCore/platform/network/BlobResourceHandle.cpp:
* Source/WebCore/platform/network/FormData.cpp:
* Source/WebKit/NetworkProcess/NetworkDataTaskBlob.cpp:
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:

Canonical link: https://commits.webkit.org/253767@main